2005-01-11  Not Zed  <NotZed@Ximian.com>

	** See bug #70919.

	* camel-multipart-signed.c (parse_content): treat the post pointer
	as binary, not 0 terminated.

2004-12-23  Not Zed  <NotZed@Ximian.com>
  
	** See bug #70556.
	
	* providers/imap/camel-imap-command.c (imap_read_untagged): scan
	the non-literal contnet for s-expression brackets, and if we seem
	to be outside of one, don't try the 'blank line after literal'
	hack.

2004-12-23  Not Zed  <NotZed@Ximian.com>
  
	* camel-folder-search.c (check_header): treat a missing header as
	if it was set to "".

2004-12-02  Not Zed  <NotZed@Ximian.com>

	** See bug #69533.

	* providers/imap/camel-imap-command.c (imap_read_untagged): gross
	hack, if we get a blank line after a literal, assume the server
	(read: groupwise) made a mistake.  Given the complexity of this
	code i'm not sure it is the server anyway but what can you do.

2004-12-01  Not Zed  <NotZed@Ximian.com>

	** See bug #69776.

	* camel-multipart-signed.c (parse_boundary): take end of data
	argument, so it handles binary data.  Use a binary data string
	search rather than strstr.
	(parse_content): dont bother to append a \0 on the end of the
	data, not binary capable.

2004-11-23  Not Zed  <NotZed@Ximian.com>

	** See bug #69615.

	* camel-smime-context.c (sm_get_passwd): removed.  All callers
	that passed it now pass NULL.  This is so we don't override the
	password function set by e-cert-db.  Seems to work ok, I think.

2004-11-22  Not Zed  <NotZed@Ximian.com>

	** See bug #69109.

	* providers/smtp/camel-smtp-transport.c (smtp_helo): if we have
	ipv6 address and it is numeric, prefix it with "IPv6:"

2004-11-30  Not Zed  <NotZed@Ximian.com>

	** See bug #69982 (maybe).

	* providers/nntp/camel-nntp-stream.c (CAMEL_NNTP_STREAM_LINE):
	rename to STREAM_LINE_SIZE so it doesn't override the STREAM_LINE
	enum.  Sigh.
	(camel_nntp_stream_init): fix for above change.

2004-11-28	S.Çağlar Onur <caglar@uludag.org.tr>

	** See bug #69446.
